--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
   <body class="bg-slate-950">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script type="module">
+      import { Buffer } from "buffer/";
+
+      window.Buffer = Buffer;
+    </script>
   </body>
 </html>
